Update birthday message from Nao to Celeste

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🎉 Feliz Cumpleaños, Nao</title>
+  <title>🎉 Feliz Cumpleaños, Celeste</title>
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet" />
   <style>
     :root {
@@ -167,7 +167,7 @@
   <button class="secret-btn" onclick="startCelebration()">✨ ¡Haz clic, Nao! ✨</button>
 
   <div class="main-card" id="main-card">
-    <h1 id="main-title">🎉🥳 ¡Feliz y bendecido cumpleaños, Nao! 🎂🎊</h1>
+    <h1 id="main-title">🎉🥳 ¡Feliz y bendecido cumpleaños, Celeste! 🎂🎊</h1>
     <p id="message-1">Deseo de corazón que hoy tengas un día maravilloso, rodeada del cariño de tu familia y de las personas que más te aprecian. Que cada momento esté lleno de alegría, tranquilidad y buenas energías.</p>
     <p id="message-2">Ojalá este nuevo ciclo en tu vida te traiga aprendizajes valiosos, metas cumplidas y muchas razones para sonreír. Que no te falten experiencias que te hagan crecer, momentos que se conviertan en recuerdos bonitos y logros que te llenen de satisfacción y orgullo.</p>
     <div id="secret-message">
@@ -175,7 +175,7 @@
       <br><br>
       <div class="closing">Un fuerte abrazo a la distancia. 🫂✨</div>
     </div>
-    <button id="closeBtn" onclick="sayGoodbye(this)">✨¡Siguiente, Nao!✨</button>
+    <button id="closeBtn" onclick="sayGoodbye(this)">✨¡Siguiente, Celeste!✨</button>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
