--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   </style>
 </head>
 <body>
-  <button class="secret-btn" onclick="startCelebration()">✨ ¡Haz clic, Nao! ✨</button>
+  <button class="secret-btn" onclick="startCelebration()">✨ ¡Haz clic, Celeste! ✨</button>
 
   <div class="main-card" id="main-card">
     <h1 id="main-title">🎉🥳 ¡Feliz y bendecido cumpleaños, Celeste! 🎂🎊</h1>
