--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
   <button class="secret-btn" onclick="startCelebration()">✨ ¡Haz clic, Celeste! ✨</button>
 
   <div class="main-card" id="main-card">
-    <h1 id="main-title">🎉🥳 ¡Feliz y bendecido cumpleaños, Celeste! 🎂🎊</h1>
-    <p id="message-1">Deseo de corazón que hoy tengas un día maravilloso, rodeada del cariño de tu familia y de las personas que más te aprecian. Que cada momento esté lleno de alegría, tranquilidad y buenas energías.</p>
-    <p id="message-2">Ojalá este nuevo ciclo en tu vida te traiga aprendizajes valiosos, metas cumplidas y muchas razones para sonreír. Que no te falten experiencias que te hagan crecer, momentos que se conviertan en recuerdos bonitos y logros que te llenen de satisfacción y orgullo.</p>
+    <h1 id="main-title">🎉 🥳🥳Feliz cumpleaños, Celeste 🥳🥳🎂</h1>
+    <p id="message-1">Que cumplas muchos años más, quise escribirte algo sencillo para desearte un bonito día.</p>
+    <p id="message-2">Aunque no nos conocemos tanto, eres agradable a pesar de nuestras peleas en broma por Teams y WhatsApp jejeje 😄😄</p>
     <div id="secret-message">
-      Aunque no hablemos con frecuencia, quiero que sepas que te tengo un aprecio sincero y te deseo lo mejor, no solo hoy, sino siempre. Que la vida te regale muchas bendiciones y que cada paso que des te acerque a lo que sueñas.
+      Ojalá hoy la pases muy bien con tus seres queridos, que te consientan y disfrutes cada momento. Que se te cumplan muchos de los deseos de tu corazón y que este nuevo año te acerque a tus metas y a todo lo bueno que quieres para ti.
       <br><br>
-      <div class="closing">Un fuerte abrazo a la distancia. 🫂✨</div>
+      <div class="closing">✨Disfruta tu día ✨</div>
     </div>
     <button id="closeBtn" onclick="sayGoodbye(this)">✨¡Siguiente, Celeste!✨</button>
   </div>
