--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
     <h1 id="main-title">🎉 🥳🥳Feliz cumpleaños, Celeste 🥳🥳🎂</h1>
     <p id="message-1">Que cumplas muchos años más, quise escribirte algo sencillo para desearte un bonito día.</p>
     <p id="message-2">Aunque no nos conocemos tanto, eres agradable a pesar de nuestras peleas en broma por Teams y WhatsApp jejeje 😄😄</p>
+      <p id="message-3">Ojalá hoy la pases muy bien con tus seres queridos, que te consientan y disfrutes cada momento. </p>
     <div id="secret-message">
-      Ojalá hoy la pases muy bien con tus seres queridos, que te consientan y disfrutes cada momento. Que se te cumplan muchos de los deseos de tu corazón y que este nuevo año te acerque a tus metas y a todo lo bueno que quieres para ti.
+      Que se te cumplan muchos de los deseos de tu corazón y que este nuevo año te acerque a tus metas y a todo lo bueno que quieres para ti.
       <br><br>
       <div class="closing">✨Disfruta tu día ✨</div>
     </div>
