--- a/index.html
+++ b/index.html
@@ -167,15 +167,24 @@
   <button class="secret-btn" onclick="startCelebration()">✨ ¡Haz clic, Celeste! ✨</button>
 
   <div class="main-card" id="main-card">
-    <h1 id="main-title">🎉 🥳🥳Feliz cumpleaños, Celeste 🥳🥳🎂</h1>
-    <p id="message-1">Que cumplas muchos años más, quise escribirte algo sencillo para desearte un bonito día.</p>
-    <p id="message-2">Aunque no nos conocemos tanto, eres agradable a pesar de nuestras peleas en broma por Teams y WhatsApp jejeje 😄😄</p>
-      <p id="message-3">Ojalá hoy la pases muy bien con tus seres queridos, que te consientan y disfrutes cada momento. </p>
+    <h1 id="main-title">🎉 🥳🥳 Feliz cumpleaños, Celeste 🥳🥳🎂</h1>
+
+    <p id="message-1">
+      Que cumplas muchos años más.<br>
+      Quise escribirte algo sencillo para desearte un bonito día.
+    </p>
+
+    <p id="message-2">
+      Aunque no nos conocemos, eres agradable, a pesar de nuestras peleas en broma por Teams y WhatsApp, jejeje 😄😄
+    </p>
+
     <div id="secret-message">
+      Ojalá hoy la pases muy bien con tus seres queridos, que te consientan y disfrutes cada momento.<br><br>
       Que se te cumplan muchos de los deseos de tu corazón y que este nuevo año te acerque a tus metas y a todo lo bueno que quieres para ti.
       <br><br>
-      <div class="closing">✨Disfruta tu día ✨</div>
+      <div class="closing">✨ Disfruta tu día ✨</div>
     </div>
+
     <button id="closeBtn" onclick="sayGoodbye(this)">✨¡Siguiente, Celeste!✨</button>
   </div>
 
@@ -270,3 +279,4 @@
   </script>
 </body>
 </html>
+
