--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <div class="closing">✨ Disfruta tu día ✨</div>
     </div>
 
-    <button id="closeBtn" onclick="sayGoodbye(this)">✨¡Siguiente, Celeste!✨</button>
+    <button id="closeBtn" onclick="sayGoodbye(this)">✨¡Haz clic, Celeste!✨</button>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
